--- a/gymreport/templates/layout.html
+++ b/gymreport/templates/layout.html
@@ -28,6 +28,7 @@
                     <div class="collapse navbar-collapse" id="navbarToggle">
                         <div class="navbar-nav mr-auto">
                             <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
+                            <a class="nav-item nav-link" href="{{ url_for('classes') }}">Classes</a>
                         </div>
                         <!-- Navbar Right Side -->
                         <div class="navbar-nav">
