--- a/gymreport/templates/classes.html
+++ b/gymreport/templates/classes.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
 <h1>Classes</h1>
-{% for c in gym_classes %} 
+{% for c in gym_classes %}
 <article class="media content-section">
     <div class="media-body">
-        <h2><a class="article-title" href="#">{{ c.name }}</a></h2>
+        <h2><a class="article-title" href="{{ url_for('show_class', class_id=c.id) }}">{{ c.name }}</a></h2>
         <p class="article-content">{{ c.class_type }}</p>
     </div>
 </article>
