--- a/gymreport/templates/layout.html
+++ b/gymreport/templates/layout.html
@@ -29,6 +29,7 @@
                         <div class="navbar-nav mr-auto">
                             <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
                             <a class="nav-item nav-link" href="{{ url_for('classes') }}">Classes</a>
+                            <a class="nav-item nav-link" href="{{ url_for('attendances') }}">Attendances</a>
                         </div>
                         <!-- Navbar Right Side -->
                         <div class="navbar-nav">
