--- a/gymreport/templates/layout.html
+++ b/gymreport/templates/layout.html
@@ -20,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light site-nav-bg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Pin My Clothes</a>
+                <a class="navbar-brand" href="#">Gym Report</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -52,7 +52,7 @@
             </div>
         </nav>
     </header>
-    <main role="main" class="container">
+    <main role="main" class="container-fluid">
         <div class="row">
             <div class="col-md-8">
                 {% with messages = get_flashed_messages(with_categories=true) %}
