--- a/gymreport/templates/class.html
+++ b/gymreport/templates/class.html
@@ -1,13 +1,13 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="container">
+<div class="container-fluid">
     <h1>{{ gymclass.name }}</h1>
     <h2 class="text-muted">Type: {{ gymclass.class_type}}</h2>
 </div>
 <div class="container">
     {% for a in gymclass.attendance_list %}
     <div class="row">
-        {{ a.date_attended }}
+        {{ a.date_attended.strftime('%Y-%m-%d') }}
     </div>
     {% endfor %}
 </div>
