--- a/gymreport/templates/classes.html
+++ b/gymreport/templates/classes.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container">
     <h1>Classes</h1>
-    <div class="row row-cols-1 row-cols-md-2">
+    <div class="row row-cols-1 row-cols-md-3">
         {% for c in gym_classes %}
         <div class="col mb-4">
             <div class="card">
@@ -19,7 +19,8 @@
                     </li>
                     {% endfor %}
                     </ul>
-                    <a href="{{ url_for('show_class', class_id=c.id) }}" class="btn btn-primary">View All Attendance</a>
+                    <a href="{{ url_for('edit_class', class_id=c.id) }}" class="btn btn-primary">Update</a>
+                    <a href="{{ url_for('show_class', class_id=c.id) }}" class="btn btn-primary">View</a>
                 </div>
             </div>
         </div>
