Add new, update,a nd delete btns for classes

--- a/gymreport/templates/add_class.html
+++ b/gymreport/templates/add_class.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="content-section">
+<div class="container-fluid">
     <form method="POST" action="">
         {{ form.csrf_token }}
         <fieldset class="form-group">
