--- a/gymreport/templates/classes.html
+++ b/gymreport/templates/classes.html
@@ -1,7 +1,14 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="container">
-    <h1>Classes</h1>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-2">
+            <h1>Classes</h1>
+        </div>
+        <div class="col-2">
+            <a href="{{ url_for('new_class') }}" class="btn btn-primary">Add Class</a>
+        </div>
+    </div>
     <div class="row row-cols-1 row-cols-md-3">
         {% for c in gym_classes %}
         <div class="col mb-4">
