Add ability to load csv files

--- a/gymreport/templates/layout.html
+++ b/gymreport/templates/layout.html
@@ -42,7 +42,10 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"="true">Register</a>
+                            <a class="nav-link" href="{{ url_for('upload_csv') }}">Upload</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Register</a>
                         </li>
                         <li>
                             <a class="nav-link" href="#">Login</a>
