--- a/gymreport/static/main.css
+++ b/gymreport/static/main.css
@@ -1,5 +1,5 @@
 body {
-    background: #5F9DF7;
+    background: #89cff0;
     color: #333333;
     height: 100vh;
 }
@@ -31,8 +31,17 @@ main {
     color: #3A1078;
 }
 
+.solid-bg {
+    background-color: #cdebf9;
+}
+
+.container-fluid {
+    background-color: #cdebf9;
+}
+
+
 .site-nav-bg {
-    background-color: #5F9DF7;
+    background-color: #89cff0;
 }
 
 .navbar-brand {
