--- a/gymreport/templates/layout.html
+++ b/gymreport/templates/layout.html
@@ -31,15 +31,11 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="{{ url_for('home') }}">Home</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Attendances
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="{{ url_for('classes') }}">By Class</a></li>
-                                <li><a class="dropdown-item" href="{{ url_for('attendances') }}">By Date</a></li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('classes') }}">Classes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('attendances') }}">Attendances</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('upload_csv') }}">Upload</a>
