--- a/gymreport/templates/classes.html
+++ b/gymreport/templates/classes.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="row row-cols-1 row-cols-md-3">
-        {% for c in gym_classes %}
+        {% for c in gym_classes|sort %}
         <div class="col mb-4">
             <div class="card">
                 <div class="card-body">
@@ -19,8 +19,8 @@
                     </h4>
                     <p class="card-subtitle mb-2 text-muted">{{ c.class_type }}</p>
                     <p class="card-text">
-                        Total Attendance: {{ c.attendance_list|length }} </br>
-                        Most recent attendance: {{ c.attendance_list|sort|first }}
+                        Total Attendance: <strong>{{ c.attendance_list|length }} </strong></br>
+                        Most recent attendance: <strong>{{ c.attendance_list|sort|first }}</strong>
                     </p>
                     <a href="{{ url_for('edit_class', class_id=c.id) }}" class="btn btn-primary">Update</a>
                     <a href="{{ url_for('show_class', class_id=c.id) }}" class="btn btn-primary">View</a>
