--- a/gymreport/templates/attendances.html
+++ b/gymreport/templates/attendances.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="container-fluid solid-bg">
-    <div class="row">
+    <div class="row align-items-center">
         <div class="col-3">
             <h1>Attendances</h1>
         </div>
