--- a/gymreport/templates/classes.html
+++ b/gymreport/templates/classes.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="container-fluid solid-bg">
-    <div class="row">
+    <div class="row align-items-center">
         <div class="col-2">
             <h1>Classes</h1>
         </div>
@@ -22,8 +22,8 @@
                         Total Attendance: <strong>{{ c.attendance_list|length }} </strong></br>
                         Most recent attendance: <strong>{{ c.attendance_list|sort(reverse = True)|first }}</strong>
                     </p>
-                    <a href="{{ url_for('edit_class', class_id=c.id) }}" class="btn btn-warning">Update</a>
-                    <a href="{{ url_for('show_class', class_id=c.id) }}" class="btn btn-info">View</a>
+                    <a href="{{ url_for('edit_class', class_id=c.id) }}" class="btn btn-sm btn-warning">Update</a>
+                    <a href="{{ url_for('show_class', class_id=c.id) }}" class="btn btn-sm btn-info">View</a>
                 </div>
             </div>
         </div>
