--- a/gymreport/templates/attendances.html
+++ b/gymreport/templates/attendances.html
@@ -27,12 +27,12 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="deleteModalLabel">Delete Class?</h5>
+                            <h5 class="modal-title" id="deleteModalLabel">Delete Attendance?</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <form action="#" method="POST">
+                            <form action="{{ url_for('delete_attendance', attendance_id=a.id) }}" method="POST">
                                 <input type="submit" class="btn btn-sm btn-danger" value="Delete">
                             </form>
                         </div>
