--- a/gymreport/templates/class.html
+++ b/gymreport/templates/class.html
@@ -1,38 +1,41 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="container-fluid">
-    <article class="media content-section mt-4">
-        <h2 class="article-title">{{ gymclass.name }}</h2>
-        <h4 class="text-muted">Type: {{ gymclass.class_type}}</h4>
-        <div class="container">
-            {% for a in gymclass.attendance_list|sort %}
-            <div class="row">
-                {{ a.date_attended.strftime('%Y-%m-%d') }}
+    <article class="media content-section">
+        <div class="row align-items-baseline m-10">
+            <div class="col-5">
+                <h2 class="article-title">{{ gymclass.name }}</h2>
             </div>
+            <div class="col-3">
+                <p class="text-muted">Type: {{ gymclass.class_type}}</p>
+            </div>
+            {% for a in gymclass.attendance_list|sort %}
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">{{ a.date_attended.strftime('%Y-%m-%d') }}</li>
+            </ul>
             {% endfor %}
-            <div>
-                <a class="btn btn-light btn-sm m-1" href="{{ url_for('classes') }}">&lt&lt</a>
-                <a class="btn btn-primary btn-sm m-1" href="{{ url_for('new_attendance') }}">Add Attendance</a>
-                <a class="btn btn-secondary btn-sm m-1"
-                    href="{{ url_for('edit_class', class_id=gymclass.id) }}">Update</a>
-                <button type="button" class="btn btn-danger btn-sm m-1" data-bs-toggle="modal"
-                    data-bs-target="#deleteModal">Delete</button>
-                <!-- Modal -->
-                <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="deleteModalLabel">Delete Class?</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                    aria-label="Close"></button>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                <form action="{{ url_for('delete_class', class_id=gymclass.id) }}" method="POST">
-                                    <input type="submit" class="btn btn-danger" value="Delete">
-                                </form>
-                            </div>
+        </div>
+        <hr width="90%" align="center" size="4">
+        <div>
+            <a class="btn btn-light btn-sm m-1" href="{{ url_for('classes') }}">&lt&lt</a>
+            <a class="btn btn-info btn-sm m-1" href="{{ url_for('new_attendance') }}">Add Attendance</a>
+            <a class="btn btn-warning btn-sm m-1" href="{{ url_for('edit_class', class_id=gymclass.id) }}">Update</a>
+            <button type="button" class="btn btn-danger btn-sm m-1" data-bs-toggle="modal"
+                data-bs-target="#deleteModal">Delete</button>
+            <!-- Modal -->
+            <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="deleteModalLabel">Delete Class?</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <form action="{{ url_for('delete_class', class_id=gymclass.id) }}" method="POST">
+                                <input type="submit" class="btn btn-danger" value="Delete">
+                            </form>
                         </div>
                     </div>
                 </div>
