Add skeleton for reports

--- a/gymreport/templates/reports.html
+++ b/gymreport/templates/reports.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="container-fluid">
-    <h1>Welcome to Gym Report</h1>
+    <h1>Reports</h1>
 </div>
 {% endblock content %}
