--- a/gymreport/templates/layout.html
+++ b/gymreport/templates/layout.html
@@ -41,7 +41,7 @@
                             <a class="nav-link" href="{{ url_for('upload_csv') }}">Upload</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Register</a>
+                            <a class="nav-link" href="{{ url_for('reports') }}">Reports</a>
                         </li>
                         <li>
                             <a class="nav-link" href="#">Login</a>
