--- a/gymreport/templates/attendances.html
+++ b/gymreport/templates/attendances.html
@@ -42,5 +42,16 @@
         </div>
     </div>
     {% endfor %}
+    {% for page_num in attendance_list.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+    {% if page_num %}
+    {% if attendance_list.page == page_num %}
+    <a class="btn btn-info mb-4" href="{{ url_for('attendances', page=page_num) }}">{{ page_num }}</a>
+    {% else %}
+    <a class="btn btn-outline-info mb-4" href="{{ url_for('attendances', page=page_num) }}">{{ page_num }}</a>
+    {% endif %}
+    {% else %}
+    ...
+    {% endif %}
+    {% endfor %}
 </div>
 {% endblock content %}
