--- a/gymreport/templates/classes.html
+++ b/gymreport/templates/classes.html
@@ -29,5 +29,16 @@
         </div>
         {% endfor %}
     </div>
+    {% for page_num in gym_classes.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+    {% if page_num %}
+    {% if gym_classes.page == page_num %}
+    <a class="btn btn-info mb-4" href="{{ url_for('classes', page=page_num) }}">{{ page_num }}</a>
+    {% else %}
+    <a class="btn btn-outline-info mb-4" href="{{ url_for('classes', page=page_num) }}">{{ page_num }}</a>
+    {% endif %}
+    {% else %}
+    ...
+    {% endif %}
+    {% endfor %}
 </div>
 {% endblock content %}
