--- a/gymreport/templates/attendances.html
+++ b/gymreport/templates/attendances.html
@@ -9,7 +9,7 @@
             <a href="{{ url_for('new_attendance') }}" class="btn btn-sm btn-primary">Add Attendance</a>
         </div>
     </div>
-    {% for a in attendance_list|sort(reverse = True) %}
+    {% for a in attendance_list %}
     <div class="row">
         <div class="col-2">
             <p>{{ a.date_attended.strftime('%Y-%m-%d') }}</p>
