--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
             <div class="card">
                 <div class="card-body">
                     <h4 class="card-title">
-                        {{ a.name }}
+                        {{ a.name|upper }}
                     </h4>
                     <p class="card-subtitle mb-2 text-muted">{{ a.category }}</p>
                     <p class="card-text">
