--- a/templates/layout.html
+++ b/templates/layout.html
@@ -41,10 +41,10 @@
                             <a class="nav-link" href="#">Upload</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Register</a>
+                            <a class="nav-link" href="{{ url_for('register') }}">Register</a>
                         </li>
                         <li>
-                            <a class="nav-link" href="#">Login</a>
+                            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
