--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -40,12 +40,18 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Upload</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+                        {% if current_user.is_authenticated %}
+                        <li>
+                            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                         </li>
+                        {% else %}
                         <li>
                             <a class="nav-link" href="{{ url_for('login') }}">Login</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+                        </li>
+                        {% endif %}
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
