--- a/app/static/main.css
+++ b/app/static/main.css
@@ -4,6 +4,7 @@
     --pink: #f9cdff;
     --litelime: #A1E8A1;
     --litepink: #fce6ff;
+    --lime: #32CD32;
 
 }
 
@@ -22,7 +23,7 @@ h3,
 h4,
 h5,
 h6 {
-    color: #32CD32;
+    color: var(--lime);
 }
 
 header {
@@ -55,20 +56,8 @@ hr {
     color: pink;
 }
 
-.site-link {
-    color: #00008B;
-}
-
-a.site-link:hover {
-    color: #FD841F;
-}
-
-.site-nav-bg {
-    background-color: #89cff0;
-}
-
-.navbar-brand {
-    color: #3A1078;
+.navbar_brand {
+    color: black
 }
 
 .site-header .navbar-nav .nav-link {
@@ -76,7 +65,7 @@ a.site-link:hover {
 }
 
 .site-header .navbar-nav .nav-link:hover {
-    color: #ffffff;
+    color: black;
 }
 
 .site-header .navbar-nav .nav-link.active {
