Comment code blocks to get app to running state

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -31,7 +31,7 @@ header {
 }
 
 main {
-    background-image: url(bg.jpg);
+    /* background-image: url(bg.jpg); */
     height: 90%;
     background-position: center;
     /* Center the image */
