--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -29,6 +29,7 @@
                     <div class="navbar-nav mr-auto">
                         <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
                         <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
+                        <a class="nav-item nav-link" href="{{ url_for('activities') }}">Activities</a>
                     </div>
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
