--- a/app/templates/activities.html
+++ b/app/templates/activities.html
@@ -1,13 +1,13 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="container solid-bg">
-    <div>
+    <div class="row">
         <h1>Activities</h1>
-        <a href="{{ url_for('add_activity') }}" class="btn btn-sm btn-success">Add Activity</a>
     </div>
-    <div class="row row-cols-1 row-cols-md-3">
-        {% for a in activities|sort %}
-        <div class="col mb-4">
+    <a href="{{ url_for('add_activity') }}" class="btn btn-sm btn-success">Add Activity</a>
+    <div class="row row-cols-1 row-cols-md-2">
+        {% for a in activities|sort(reverse=True, attribute="modified_time") %}
+        <div class="col mb-6">
             <div class="card">
                 <div class="card-body">
                     <h4 class="card-title">
