--- a/app/templates/activities.html
+++ b/app/templates/activities.html
@@ -18,6 +18,10 @@
                         Total Attendance: <strong>{{ a.attendances|length }} </strong></br>
                         Most recent attendance: <strong>{{ a.attendances|sort(reverse = True)|first }}</strong>
                     </p>
+                    <a href="{{ url_for('activity', activity_id=a.id) }}" class="btn btn-sm btn-info">View</a>
+                    <form action="{{ url_for('delete_activity', activity_id=a.id) }}" method="POST">
+                        <input type="submit" class="btn btn-sm btn-warning" value="Delete">
+                    </form>
                 </div>
             </div>
         </div>
@@ -26,9 +30,9 @@
     {% for page_num in activities.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
     {% if page_num %}
     {% if activities.page == page_num %}
-    <a class="btn btn-info mb-4" href="{{ url_for('activities', page=page_num) }}">{{ page_num }}</a>
+    <a class="btn btn-outline-success mb-4" href="{{ url_for('activities', page=page_num) }}">{{ page_num }}</a>
     {% else %}
-    <a class="btn btn-outline-info mb-4" href="{{ url_for('activities', page=page_num) }}">{{ page_num }}</a>
+    <a class="btn btn-light mb-4" href="{{ url_for('activities', page=page_num) }}">{{ page_num }}</a>
     {% endif %}
     {% else %}
     ...
