add reset password functionality

--- a/app/templates/reset_password_request.html
+++ b/app/templates/reset_password_request.html
@@ -4,7 +4,7 @@
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form_group">
-            <legend class="border-bottom mb-4">Request Password Reset Email</legend>
+            <legend class="border-bottom mb-4">Request Reset</legend>
             <div class="form-group">
                 {{ form.email.label(class="form-control-label") }}
                 {% if form.email.errors %}
