--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -10,9 +10,9 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css')}}">
     {% if title %}
-    <title>Gym Report - {{ title }}</title>
+    <title>GymLog- {{ title }}</title>
     {% else %}
-    <title>Gym Report</title>
+    <title>GymLog</title>
     {% endif %}
 </head>
 
@@ -20,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light site-nav-bg">
             <div class="container-fluid">
-                <a class="navbar-brand site-link" href="#">Gym Report</a>
+                <a class="navbar-brand site-link" href="#">GymLog</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
