--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,5 +2,7 @@
 {% block content %}
 <div class="container-fluid">
     <h1>Welcome to Gym Report</h1>
+    <p>{{quote}}</p>
+    <p>{{author}}</p>
 </div>
 {% endblock content %}
