add font; adjust body vh proportion

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -51,7 +51,7 @@
             </div>
         </nav>
     </header>
-    <main role="main" class="container-fluid mt-4">
+    <main role="main" class="container-fluid">
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-10">
