--- a/app/static/main.css
+++ b/app/static/main.css
@@ -10,12 +10,21 @@
     --navbar-color: #ffb38a;
 }
 
+/* TODO: use another font face */
+@font-face {
+    font-family: 'Fira Code';
+    src: url('fonts/FiraCode-Regular.woff2');
+    font-weight: bold;
+}
+
 body {
     /* background: #89cff0; */
     /* background: #FD841F; */
     background-color: var(--bg-color);
     color: var(--text-color);
-    height: 100vh;
+    margin: 0;
+    min-height: 100vh;
+    font-family: 'Fira Code';
 }
 
 h1,
@@ -29,7 +38,14 @@ h6 {
 
 
 header {
-    height: 7%;
+    height: 5vh;
+}
+
+main {
+    display: grid;
+    place-content: center;
+    text-align: center;
+    height: 95vh;
 }
 
 hr {
