--- a/app/static/main.css
+++ b/app/static/main.css
@@ -6,8 +6,9 @@
     /* --bg-color: blanchedalmond; */
     --bg-color: black;
     /* --text-color: #002eff; */
-    --text-color: orange;
-    --navbar-color: #ffb38a;
+    --text-color: #32CD32;
+    /* --navbar-color: #ffb38a; */
+    --navbar-color: #A1E8A1;
 }
 
 /* TODO: use another font face */
