add Font Awesome and update add btn

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -209,3 +209,17 @@ a.article-title:hover {
     border-color: var(--secondary-color);
     color: var(--secondary-color)
 }
+
+.btn-other:hover {
+    color: white;
+}
+
+.btn-add {
+    background-color: transparent;
+    border-color: var(--primary-color);
+    color: var(--primary-color)
+}
+
+.btn-add:hover {
+    color: white;
+}
