--- a/app/templates/classes.html
+++ b/app/templates/classes.html
@@ -17,8 +17,10 @@
                     Total Attendance: <strong>{{ c.attendance_list|length }} </strong></br>
                     Most recent attendance: <strong>{{ c.attendance_list|sort(reverse = True)|first }}</strong>
                 </p>
-                <a href="{{ url_for('edit_class', class_id=c.id) }}" class="btn btn-sm btn-warning">Update</a>
-                <a href="{{ url_for('show_class', class_id=c.id) }}" class="btn btn-sm btn-info">View</a>
+                <a href="{{ url_for('edit_class', class_id=c.id) }}" class="btn btn-sm btn-current"><i
+                        class="fa-solid fa-pen-to-square"></i></a>
+                <a href="{{ url_for('show_class', class_id=c.id) }}" class="btn btn-sm btn-current"><i
+                        class="fa-solid fa-circle-info"></i></a>
             </div>
         </div>
     </div>
