--- a/app/templates/classes.html
+++ b/app/templates/classes.html
@@ -7,7 +7,7 @@
 <div class="row row-cols-1 row-cols-md-3">
     {% for c in gym_classes|sort %}
     <div class="col mb-4">
-        <div class="card">
+        <div class="card content">
             <div class="card-body">
                 <h4 class="card-title">
                     {{ c.name }}
